refactor(shell): move shell chrome into Scene-Builder-editable shell.fxml
Extract the Unified Shell chrome (root BorderPane, header bar, editor toolbar with
all action buttons, status bar, work-area skeleton) into pages/shell.fxml, loaded by
UnifiedShellView via the fx:root pattern (loader.setRoot(this)/setController(this)).
The static node tree is now editable in Scene Builder; UnifiedShellView keeps all the
dynamic wiring.

- shell.fxml: BorderPane(left=activityBarHost, center=BorderPane(top=header+toolbar,
  center=workSplit), bottom=statusBar). Toolbar buttons, toggles, header icons, search
  pill, status labels and collapse chevrons are standard nodes with fx:id/onAction and
  inline <IconifyIcon> graphics. EditorHost and UnifiedSearchBar (no-arg) are real FXML
  tags; everything that needs a constructor arg stays a placeholder.
- UnifiedShellView: constructor now self-loads shell.fxml; @FXML fields replace the
  build*() node construction (all removed, along with the toolButton/headerIconButton/
  panelToggle/statusLabel/wrapCollapsible factories). initialize() builds the
  editorHost-dependent controls (ActivityBar, InspectorPanel, ProblemsPanel,
  QueryConsole, view switch) into the placeholders, re-binds the action FlowPane's
  prefWrapLength (keeps the single-row toolbar), registers toolbar buttons for display
  settings, and wires the status bar + listeners. Action handlers are public @FXML on*
  methods (jpackage requires public).
- Docs: CLAUDE.md + architecture.md updated to describe shell.fxml and the Scene Builder
  limitation (Java 25/preview custom controls don't render in Scene Builder).

Verified: compileJava clean; CollapsibleSidePanelsTest (shell loads, collapse/reopen)
and IconifyIconCoverageTest (all FXML bi-* resolve, import present) pass.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>